Fixed mobile display problems

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -11,3 +11,5 @@
 $material-dark: map-merge($material-dark, (
   'background': var(--v-background-base, map-get($material-dark, 'background')) !important,
 ));
+
+$body-font-family: 'Comfortaa';
